Make agent jre 1.4 compatible Add --agent-version switch