@@ -3,7 +3,6 @@ package kg.apc.perfmon.metrics;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
 import org.apache.jorphan.logging.LoggingManager;
 import org.apache.log.Logger;
 import org.hyperic.sigar.SigarException;
@@ -26,13 +25,11 @@ class ExecMetric extends AbstractPerfMonMetric {
         command = params.params;
     }
 
-    public void getValue(StringBuilder res) throws SigarException {
+    public void getValue(StringBuffer res) throws SigarException {
         log.debug("Executing custom script: " + MetricParams.join(null, command, " "));
 
         try {
-            ProcessBuilder pb = new ProcessBuilder(Arrays.asList(command));
-
-            Process p = pb.start();
+            Process p = Runtime.getRuntime().exec(command);
 
             BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
 
